<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_fragment">

    <TextView
        android:id="@+id/tv_title"
        style="@style/AppNameTitleStyle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layout_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="@dimen/fg_page_padding"
        android:layout_marginTop="@dimen/setting_card_layout_mt"
        android:layout_marginBottom="@dimen/fg_page_padding"
        android:background="@drawable/bg_radius_48_white"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="1.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/layout_view"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/setting_display_item_h"
            android:layout_marginLeft="@dimen/fg_model_inner_padding"
            android:layout_marginTop="@dimen/setting_display_item_mt"
            android:layout_marginRight="@dimen/fg_model_inner_padding"
            android:background="@drawable/bg_radius_33_yellow"
            android:gravity="center"
            android:text="@string/txt_customer_display"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_20"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_view"
        android:layout_width="0dp"
        android:layout_height="@dimen/setting_display_h"
        android:layout_marginLeft="@dimen/setting_display_ml"
        android:layout_marginTop="@dimen/setting_card_layout_mt"
        android:layout_marginRight="@dimen/fg_page_padding"
        android:background="@drawable/bg_radius_33_white"
        app:layout_constraintHorizontal_weight="2"
        app:layout_constraintLeft_toRightOf="@id/layout_list"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <TextView
            android:id="@+id/tv_display_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/setting_device_ml"
            android:gravity="center_vertical|left"
            android:text="@string/txt_customer_display"
            android:textColor="@color/black"
            android:textSize="@dimen/ts_18"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_device_name" />

        <TextView
            android:id="@+id/tv_device_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/txt_device_type"
            android:textColor="@color/dark_98"
            android:textSize="@dimen/ts_19"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/tv_display_name"
            app:layout_constraintRight_toLeftOf="@id/tv_device_state"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_device_state"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/setting_device_state_h"
            android:layout_marginRight="@dimen/setting_device_mr"
            android:background="@drawable/bg_radius_33_black"
            android:gravity="center"
            android:paddingLeft="@dimen/setting_device_state_paddingRL"
            android:paddingRight="@dimen/setting_device_state_paddingRL"
            android:text="@string/txt_device_state"
            android:textColor="@color/white"
            android:textSize="@dimen/ts_18"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>